--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.jean.remoteCamera"
+      package="com.jean.FarCam"
       android:versionCode="1"
       android:versionName="1.0">
     <uses-sdk android:minSdkVersion="3" />
@@ -13,7 +13,7 @@
         <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".RemoteCameraActivity"
+        <activity android:name=".FarCamActivity"
                   android:label="@string/app_name" 
                      android:configChanges="orientation|keyboardHidden"
                      android:screenOrientation="portrait" 
